[package]
name = "sphere_terrain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.22.0"
hexasphere = "=8.0.0"
rand = "0.8.5"
clatter = { git = "https://github.com/Ralith/clatter", features = ["rand"] }
tinyvec = "1.6.0"
serde = { version = "1", features = ["derive"] }
kiddo = "2.0.2"
atomic_float = "0.1.0"
rayon = "1.7.0"

[features]
ij = []

[profile.release]
debug = true
split-debuginfo = "unpacked"
